<resources>
    <string name="app_name">LightWeaverMobile</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_misc">Misc Test Item</string>

    <!-- Main Navigation Menu -->
    <string name="menu_devices">Devices</string>
    <string name="menu_device_groups">Device Groups</string>
    <string name="menu_scenes">Scenes</string>
    <string name="menu_palette">Palette</string>
    <string name="menu_settings">Settings</string>

    <!-- Device Browser -->
    <string name="device_settings">Device Settings</string>
    <string name="device_type_icon">Device Icon</string>
    <string name="device_connection_error">Device Unable To Connect</string>

    <!-- Create Device -->
    <string name="device_name_icon">Device Name Icon</string>
    <string name="device_name">Device Name</string>
    <string name="device_type">Device Type</string>
    <string name="device_connection_icon">Device Connection Icon</string>
    <string name="device_connection_method">Connection Method</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="device_discoverable">Discoverable</string>
    <string name="device_local">Local Device</string>
    <string name="device_discoverable_hint">If the IP Address of a device is not static, the system will automatically attempt to reconnect to discoverable devices in the event their IP Address changes</string>
    <string name="device_local_hint">The system will not attempt to connect or re-discover Local Devices unless you are connected to the current network</string>
    <string name="create">Create</string>
    <string name="create_device_connection_error">Unable to connect to device.\nIs your connection information correct?</string>
    <string name="create_device_already_exists_error">This device has already been added with the nickname \"%s\"</string>
    <string name="connecting">Connecting</string>
    <string name="create_device_generic_error">An Error Occurred</string>
</resources>