<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group_devices">
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_device"
            android:title="@string/menu_devices"/>
        <item
            android:id="@+id/nav_device_groups"
            android:icon="@drawable/ic_menu_device_group"
            android:title="@string/menu_device_groups"/>
        <item
            android:id="@+id/nav_scenes"
            android:icon="@drawable/ic_menu_scenes"
            android:title="@string/menu_scenes"/>
        <item
            android:id="@+id/nav_palette"
            android:icon="@drawable/ic_menu_palette"
            android:title="@string/menu_palette"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
    </group>
</menu>