<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_devices">

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.example.lightweaver.moblie.ui.device.DeviceBrowserFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_device_browser" />

    <fragment
        android:id="@+id/nav_device_groups"
        android:name="com.example.lightweaver.moblie.ui.devicegroup.DeviceGroupBrowserFragment"
        android:label="@string/menu_device_groups"
        tools:layout="@layout/fragment_device_group_browser" />

    <fragment
        android:id="@+id/nav_palette"
        android:name="com.example.lightweaver.moblie.ui.palette.PaletteBrowserFragment"
        android:label="@string/menu_palette"
        tools:layout="@layout/fragment_palette_browser" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.lightweaver.moblie.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_scenes"
        android:name="com.example.lightweaver.moblie.ui.scene.SceneBrowserFragment"
        android:label="@string/menu_scenes"
        tools:layout="@layout/fragment_scene_browser" />
</navigation>